WIP: Improved.